2002-08-05  Jason Tibbitts  <tibbs@math.uh.edu>

	* bin/mj_queuerun (parse_commands): 
	* bin/mj_email (parse_commands): Eliminate any default filename
	from the generated reply message.

2002-07-30  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (format_error)  Allow list-specific
	error file customization.
	(reject)  Account for the new session directory structure
	when attaching the session file.
	
	* lib/mj_cf_defs.pl:  Add "Disposition-Notification-To" to
	the delete_headers setting.  Suggested by Roger Klorese.

	* lib/Mj/Format.pm:  (accept, reject)  Use the token's list
	when retrieving format files.  
	Escape error message.  Thanks to Roger Klorese.

2002-07-28  Jason Tibbitts  <tibbs@math.uh.edu>

	* bin/mj_shell: Fix crash with -D.

	* lib/Majordomo.pm (_lists): Don't modify the values we get from
	_list_config_get; they're just references and changing them will
	change the internal structures.

2002-07-22  Michael Yount <csf@moscow.com>

	* bin/mj_wwwusr:  Allow continued session information to
	be saved in a single file.

2002-07-19  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Majordomo.pm (connect): Add modes to mkdir calls to appease
	old versions of Perl.  When trying to make directories a second
	time, add some debugging output.
	(s_recognize): Don't return $dir2 with a trailing slash.

2002-07-17  Jason Tibbitts  <tibbs@math.uh.edu>

	* lib/Mj/BounceHandler.pm (_hbr_noprobe): Call a hook when users
	are removed due to bounces.

	* lib/Majordomo.pm (_createlist): Add another call to the
	createlist-regen hook.

2002-07-16  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (_register)  Add missing semicolon.

2002-07-16  Jason Tibbitts  <tibbs@math.uh.edu>

	* lib/Majordomo.pm (s_expire): Expire recursively.  Attempt to
	delete session directories as well.

2002-07-14  Jason Tibbitts  <tibbs@math.uh.edu>

	* lib/Majordomo.pm (s_recognize): Look for the session in the
	appropriate subdirs as well.  Return the full path to the session